# hpc-turbulence-code

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
CMake/: HelperFunctions.cmake
Doc/WS1/: README.md  README_short.md
Doc/WS1/data/gprof/: analysis_Cavity2D.txt  analysis_Cavity3D.txt  analysis_Channel2D.txt  analysis_Channel3D.txt  analysis_ChannelBackwardFacingStep2D.txt  analysis_ChannelBackwardFacingStep3D.txt
ExampleCases/: Cavity2D.xml  Cavity3D.xml  Channel2D.xml  Channel3D.xml  ChannelBackwardFacingStep2D.xml  ChannelBackwardFacingStep3D.xml
Source/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  DataStructures.cpp  DataStructures.hpp  Definitions.hpp  FlowField.cpp  FlowField.hpp  GlobalBoundaryFactory.cpp  GlobalBoundaryFactory.hpp  Iterators.cpph  Iterators.hpp  Main.cpp  Meshsize.cpp  Meshsize.hpp  MeshsizeFactory.cpp  MeshsizeFactory.hpp  Parameters.hpp  SimpleTimer.cpp  SimpleTimer.hpp  Simulation.cpp  Simulation.hpp  TurbulentSimulation.cpp  TurbulentSimulation.hpp
Source/ParallelManagers/: ParallelConfiguration.cpp  ParallelConfiguration.hpp  ParallelManager.cpp  ParallelManager.hpp  PetscParallelConfiguration.cpp  PetscParallelConfiguration.hpp  PetscParallelManager.cpp  PetscParallelManager.hpp  TurbulentParallelManager.cpp  TurbulentParallelManager.hpp  TurbulentPetscParallelManager.cpp  TurbulentPetscParallelManager.hpp
Source/Solvers/: EigenSolver.cpp  EigenSolver.hpp  LinearSolver.cpp  LinearSolver.hpp  PetscSolver.cpp  PetscSolver.hpp  SORSolver.cpp  SORSolver.hpp
Source/Stencils/: BFInputStencils.cpp  BFInputStencils.hpp  BFStepInitStencil.cpp  BFStepInitStencil.hpp  BufferFillStencil.cpp  BufferFillStencil.hpp  BufferReadStencil.cpp  BufferReadStencil.hpp  DistanceStencil.cpp  DistanceStencil.hpp  FGHStencil.cpp  FGHStencil.hpp  FGHStencilTurb.hpp  InitTaylorGreenFlowFieldStencil.cpp  InitTaylorGreenFlowFieldStencil.hpp  MaxUStencil.cpp  MaxUStencil.hpp  MinTimeStepStencil.cpp  MinTimeStepStencil.hpp  MovingWallStencils.cpp  MovingWallStencils.hpp  NeumannBoundaryStencils.cpp  NeumannBoundaryStencils.hpp  ObstacleStencil.cpp  ObstacleStencil.hpp  PeriodicBoundaryStencils.cpp  PeriodicBoundaryStencils.hpp  PressureBufferFillStencil.cpp  PressureBufferFillStencil.hpp  PressureBufferReadStencil.cpp  PressureBufferReadStencil.hpp  RHSStencil.cpp  RHSStencil.hpp  Stencil.hpp  StencilFunctions.hpp  TurbulentFGHStencil.cpp  TurbulentFGHStencil.hpp  TurbulentVTKStencil.cpp  TurbulentVTKStencil.hpp  VTKStencil.cpp  (+21 more)
Tests/: CMakeLists.txt  DerivativesTest.cpp  FlowFieldTest.cpp  ScalarFieldTest.cpp  VectorFieldTest.cpp
